--- a/index.html
+++ b/index.html
@@ -45,90 +45,91 @@
         </div>
 
     </header>
-    <section class="somos">
-        <p id="galeria">
-            Quienes somos
-        </p>
-        <p>
-            Somos un grupo de artistas plásticos dedicados a distintas expresiones artísticas,decidimos formar una cooperativa llamada “Grupo Cero”. <br> <br> "Grupo Cero " es un espacio de arte moderno y vanguardista, destinado a la exhibición de nuevos
-            y consagrados talentos contemporáneos. Se destaca por ser un lugar abierto a distintas disciplinas artisticas, tales como; pintura, escultura, ofreberia,tejidos.
-        </p>
-        <p>
-            Te interesa el arte? Bienvenido a nuestro sitio web!
-        </p>
-    </section>
-    <section class="carrusel">
-        <div id="demo" class="carousel slide" data-ride="carousel">
+    <centro>
+        <section class="somos">
+            <p id="galeria">
+                Quienes somos
+            </p>
+            <p>
+                Somos un grupo de artistas plásticos dedicados a distintas expresiones artísticas,decidimos formar una cooperativa llamada “Grupo Cero”. <br> <br> "Grupo Cero " es un espacio de arte moderno y vanguardista, destinado a la exhibición de
+                nuevos y consagrados talentos contemporáneos. Se destaca por ser un lugar abierto a distintas disciplinas artisticas, tales como; pintura, escultura, ofreberia,tejidos.
+            </p>
+            <p>
+                Te interesa el arte? Bienvenido a nuestro sitio web!
+            </p>
+        </section>
+        <section class="carrusel">
+            <div id="demo" class="carousel slide" data-ride="carousel">
 
-            <div class=container>
-                <div id="proparallax">
-                    <img class="one" src="img/Escultura.jpg" />
-                    <img class="two" src="img/Orfebreria.jpg" />
-                    <img class="three" src="img/Pinturas.jpg" />
-                    <img class="one" src="img/fotografia.jpg" />
+                <div class=container>
+                    <div id="proparallax">
+                        <img class="one" src="img/Escultura.jpg" />
+                        <img class="two" src="img/Orfebreria.jpg" />
+                        <img class="three" src="img/Pinturas.jpg" />
+                        <img class="one" src="img/fotografia.jpg" />
+                    </div>
                 </div>
             </div>
+            <br>
+            <div class="cards-list ">
+
+                <div class="card 1 ">
+                    <div class="card_image "> <img src="https://i.redd.it/b3esnz5ra34y.jpg " /> </div>
+                    <div class="card_title title-white ">
+                        <a href="fotografia.html " style="color:#DBE9EE ">Fotografia </a>
+                    </div>
+                </div>
+
+                <div class=" card 2 ">
+                    <div class="card_image ">
+                        <img src="https://cdn.blackmilkclothing.com/media/wysiwyg/Wallpapers/PhoneWallpapers_FloralCoral.jpg " />
+                    </div>
+                    <div class="card_title title-white ">
+                        <a href="pintura.html " style="color:#F7F9F9 ">Pinturas</a>
+                    </div>
+                </div>
+
+                <div class=" card 3 ">
+                    <div class="card_image ">
+                        <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif " />
+                    </div>
+                    <div class="card_title ">
+                        <a href="ofre_escul.html " style="color:#DBE9EE ">Ofreberia/Escultura</a>
+                    </div>
+                </div>
+
+                <div class="card 4 ">
+                    <div class="card_image ">
+                        <img src="https://media.giphy.com/media/LwIyvaNcnzsD6/giphy.gif " />
+                    </div>
+                    <div class="card_title title-black ">
+                        <a href="tejidos.html " style="color:#F7F9F9 ">Tejidos </a>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
+
+        <div id="map">
         </div>
-        <br>
-        <div class="cards-list ">
+        <script src="script.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik&callback=iniciarMap">
+        </script>
 
-            <div class="card 1 ">
-                <div class="card_image "> <img src="https://i.redd.it/b3esnz5ra34y.jpg " /> </div>
-                <div class="card_title title-white ">
-                    <a href="fotografia.html " style="color:#DBE9EE ">Fotografia </a>
-                </div>
-            </div>
-
-            <div class=" card 2 ">
-                <div class="card_image ">
-                    <img src="https://cdn.blackmilkclothing.com/media/wysiwyg/Wallpapers/PhoneWallpapers_FloralCoral.jpg " />
-                </div>
-                <div class="card_title title-white ">
-                    <a href="pintura.html " style="color:#F7F9F9 ">Pinturas</a>
-                </div>
-            </div>
-
-            <div class=" card 3 ">
-                <div class="card_image ">
-                    <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif " />
-                </div>
-                <div class="card_title ">
-                    <a href="ofre_escul.html " style="color:#DBE9EE ">Ofreberia/Escultura</a>
-                </div>
-            </div>
-
-            <div class="card 4 ">
-                <div class="card_image ">
-                    <img src="https://media.giphy.com/media/LwIyvaNcnzsD6/giphy.gif " />
-                </div>
-                <div class="card_title title-black ">
-                    <a href="tejidos.html " style="color:#F7F9F9 ">Tejidos </a>
-                </div>
-            </div>
-
+        <div class="texton">
+            <h1>grupo cero cofee</h1>
+            <br>
+            <h5 align="center" style="color:white;">
+                <p>en estos momentos de pandemia nos encontramos cerrados pero en fase 3 </p>
+                <p>podras visitarnos con el aforo correspondiente </p>
+                <p>hablaremos tanto de arte digital como posibles negocios y futuras subastas que se realizaran en el mismo cafe</p>
+                <p>te esperamos </p>
+                <p>Av. Libertad 1348, 1, Viña del Mar</p>
+            </h5>
         </div>
-
-    </section>
-
-
-    <div id="map">
-    </div>
-    <script src="script.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik&callback=iniciarMap">
-    </script>
-
-    <div class="texton">
-        <h1>grupo cero cofee</h1>
-        <br>
-        <h5 align="center" style="color:white;">
-            <p>en estos momentos de pandemia nos encontramos cerrados pero en fase 3 </p>
-            <p>podras visitarnos con el aforo correspondiente </p>
-            <p>hablaremos tanto de arte digital como posibles negocios y futuras subastas que se realizaran en el mismo cafe</p>
-            <p>te esperamos </p>
-            <p>Av. Libertad 1348, 1, Viña del Mar</p>
-        </h5>
-    </div>
-
+    </centro>
     <br>
     <br>
 
