--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
 
     </header>
-    <centro>
+    <div class: "centro">
         <section class="somos">
             <p id="galeria">
                 Quienes somos
@@ -129,7 +129,8 @@
                 <p>Av. Libertad 1348, 1, Viña del Mar</p>
             </h5>
         </div>
-    </centro>
+    </div>
+
     <br>
     <br>
 
