--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik&callback=iniciarMap">
         </script>
 
-        <div>
+        <div class: "texton">
             <h1>grupo cero cofee</h1>
             <br>
             <h5 align="center" style="color:white;">
