--- a/exposiciones.html
+++ b/exposiciones.html
@@ -56,7 +56,7 @@
 
     <section>
         <div class="exp">
-            <h1 style="color: blue;">
+            <h1 style="color: rgb(22, 54, 25);">
                 <p>noticia¡</p>
             </h1>
             <p>
