--- a/exposiciones.html
+++ b/exposiciones.html
@@ -67,11 +67,11 @@
             <a href="https://www.genbeta.com/actualidad/revolucion-nft-arte-pagan-1-36-millones-euros-pixel-gris-subasta">aqui el link ;)</a>
             <br>
             <br>
-            <p>joker(token) : 12 btc</p>
+            <p style="color: rgb(0, 0, 0);">joker(token) : 12 btc</p>
             <br>
-            <p>pintura renacentista "niño mirando cielo ": 60 btc</p>
+            <p style="color: rgb(0, 0, 0);">pintura renacentista "niño mirando cielo ": 60 btc</p>
             <br>
-            <p>capilla rupestre chilena : 25 ltcoin</p>
+            <p style="color: rgb(0, 0, 0);">capilla rupestre chilena : 25 ltcoin</p>
         </div>
     </section>
 
