--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <div class: "texton">
         <h1>grupo cero cofee</h1>
         <br>
-        <h5 align="center" style="color:white;">
+        <h5 align="left" style="color:rgb(0, 0, 0);">
             <p>en estos momentos de pandemia nos encontramos cerrados pero en fase 3 </p>
             <p>podras visitarnos con el aforo correspondiente </p>
             <p>hablaremos tanto de arte digital como posibles negocios y futuras subastas que se realizaran en el mismo cafe</p>
