--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </script>
 
     <div class: "texton">
-        <h1>grupo cero cofee</h1>
+        <h1 style="color:rgb(63, 28, 28);">grupo cero cofee</h1>
         <br>
         <h5 align="left" style="color:rgb(0, 0, 0);">
             <p>en estos momentos de pandemia nos encontramos cerrados pero en fase 3 </p>
