--- a/iniciosesion.html
+++ b/iniciosesion.html
@@ -8,31 +8,12 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2? family = Crimson + Texto: ital @ 1 & display = swap " rel=" stylesheet ">
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script type="text/javascript">
-        $(document).ready(function() {
-            $("#error").hide();
-            $("#formulario").submit(function() {
-                var mensaje = "";
-
-                if ($("#contraseña").val().trim().length == 0) {
-                    mensaje = "la contraseña está en blanco";
-                }
-                if ($("#email").val().trim().length == 0) {
-                    mensaje = "Ingresa tu correo";
-                }
-                if (mensaje != "") {
-                    $("#error").html(mensaje);
-                    $("#error").show();
-                    event.preventDefault();
-                }
-            })
-        })
-    </script>
 </head>
 
 <body>
@@ -42,8 +23,8 @@
             <a href="index.html">Inicio</a>
             <a href="exposiciones.html">Exposiciones</a>
             <a href="contacto.html">Contacto</a>
-            <a href="registro.html">Registrarse</a>
-            <a href="inicio sesion.html">Iniciar Sesion</a>
+            <a href="registrarse.html">Registrarse</a>
+            <a href="iniciosesion.html">Iniciar Sesion</a>
         </nav>
         <section class="textos-header">
             <h1>Galeria Grupo Cero</h1>
@@ -54,6 +35,7 @@
                     style="stroke: none; fill: #3a1f12;"></path>
             </svg></div>
     </header>
+
 
     <!--MainPagina-->
     <div class="container">
