--- a/index.html
+++ b/index.html
@@ -31,13 +31,10 @@
             <a href="index.html">Inicio</a>
             <a href="exposiciones.html">Exposiciones</a>
             <a href="contacto.html">Contacto</a>
-<<<<<<< HEAD
-            <a href="registrarse.html">Registrarse</a>
-            <a href="iniciosesion.html">Iniciar Sesion</a>
-=======
-            <a href="registro.html">Registrarse</a>
-            <a href="inicio sesion.html">Iniciar Sesion</a>
->>>>>>> origin/main
+            <<<<<<< HEAD <a href="registrarse.html">Registrarse</a>
+                <a href="iniciosesion.html">Iniciar Sesion</a> =======
+                <a href="registro.html">Registrarse</a>
+                <a href="inicio sesion.html">Iniciar Sesion</a> >>>>>>> origin/main
         </nav>
         <section class="textos-header">
             <h1>Galeria Grupo Cero</h1>
